Removal of extra space in js file

--- a/testFiles/randomNumberGeneratorTest.html
+++ b/testFiles/randomNumberGeneratorTest.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            // random Number Gennerator //        
+        </title>
+    </head>
+
     <body>
         <button onclick="document.getElementById('randomDemo').innerHTML = generateRandom(min, max)">Initiate</button>
 
         <p id="randomDemo"></p>
 
         <script>
-            // GENERATE BETWEEN 1 AND 800 (BOTH INLCUDED)
+            // GENERATE BETWEEN 1 AND 800 (BOTH INCLUDED)
             var min = 1;
             var max = 800;
             function generateRandom(min, max) {
