--- a/testFiles/randomTimerTest.html
+++ b/testFiles/randomTimerTest.html
@@ -8,6 +8,8 @@
             <title>
                 // Timer Test //
             </title>
+
+            <link rel="stylesheet" href="randomTimerTest.css">
         </head>
             
         <body onload="setTimeout(hidden, 3000);">
