Refactor of Test Files

--- a/testFiles/randomTimerTest.html
+++ b/testFiles/randomTimerTest.html
@@ -13,7 +13,7 @@
         </head>
             
         <body onload="setTimeout(hidden, 3000);">
-            <div class="div-container">
+            <div class="div-container" height="300" width= "300">
                 <div class="div-subcontainer">
                     <p id="line01"> 
                         Line01 Visual (Appear/disappear every 3 seconds)
