--- a/testFiles/timerCountdownTest.html
+++ b/testFiles/timerCountdownTest.html
@@ -12,7 +12,7 @@
             <link rel="stylesheet" href="randomTimerTest.css">
         </head>
         <body>
-            <div class="div-container">
+            <div class="div-container" height="300" width="300">
                 <div class="div-subcontainer">
                     <button id="button" onclick="beginAgain()">Click to Begin</button>
                     <p id="line01"></p>
@@ -26,7 +26,7 @@
                 function beginAgain() {
                     document.getElementById("button").disabled = true;
                     document.getElementById("button").innerHTML = "Disabled";
-                    
+
                     startTimer = setInterval(function() {
                         document.getElementById("line01").innerHTML = --count;
                         if(count == 0) {
