--- a/testFiles/randomNumberGeneratorTest.html
+++ b/testFiles/randomNumberGeneratorTest.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            // random Number Gennerator //        
-        </title>
-    </head>
+    <html>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            
+            <title>
+                // random Number Gennerator //        
+            </title>
 
-    <body>
-        <button onclick="document.getElementById('randomDemo').innerHTML = generateRandom(min, max)">Initiate</button>
+            <link rel="stylesheet" href="randomTimerTest.css">
+        </head>
 
-        <p id="randomDemo"></p>
+        <body>
+            <div class="div-container" height="300" width="300">
+                <div class="div-subcontainer">
+                    <button onclick="document.getElementById('randomDemo').innerHTML = generateRandom(min, max)">Initiate</button>
+                    <p id="randomDemo"></p>
+                </div>
+            </div>
 
-        <script>
-            // GENERATE BETWEEN 1 AND 800 (BOTH INCLUDED)
-            var min = 1;
-            var max = 800;
-            function generateRandom(min, max) {
-                return Math.floor(Math.random() * (max - min + 1)) + min;
-            }
-        </script>
-    </body>
-</html>
+            <script>
+                // GENERATE BETWEEN 1 AND 800 (BOTH INCLUDED)
+                var min = 1;
+                var max = 800;
+                function generateRandom(min, max) {
+                    return Math.floor(Math.random() * (max - min + 1)) + min;
+                }
+            </script>
+        </body>
+    </html>
