Finished investigation of making the divs move every 5 seconds

--- a/testFiles/timerWithPositionSwitchTest.html
+++ b/testFiles/timerWithPositionSwitchTest.html
@@ -11,8 +11,10 @@
 
             <link rel="stylesheet" href="randomTimerTest.css">
         </head>
-        <body onload="generateSquare();">
+        <body>
             <div class="div-container">
+                <button id="button" onclick="beginAgain()">Click to Begin</button>
+                <p id="line01">20</p>
                 <div id="div-subcontainer">
                     <div id="container"></div>
                 </div>
@@ -26,21 +28,68 @@
             </style>
 
             <script>
+                var count = 20;
                 var max = 750;
                 var min = 1;
+                var numberOfSquares = 11; 
+                var positionChange = 6;
                 var randomCoordinateX;
                 var randomCoordinateY;
+                var squareDivArray = [];
+                var startTimer;
 
-                function generateSquare() {
+                function beginAgain() {
                     var squareDiv;
-                    generateRandomX(min, max);
-                    generateRandomY(min, max);
+                    generateSquares();
+                    document.getElementById("button").disabled = true;
+                    document.getElementById("button").innerHTML = "Disabled";
 
-                    squareDiv = document.createElement("div");
-                    squareDiv.style = "background: rgb(14, 71, 163); border: 1px solid white; cursor: pointer; height: 50px; position: absolute; width: 50px";
-                    squareDiv.style.left = randomCoordinateX + "px";
-                    squareDiv.style.top = randomCoordinateY + "px";
-                    document.getElementById("container").appendChild(squareDiv);
+                    startTimer = setInterval(function () {
+                        document.getElementById("line01").innerHTML = --count;
+                        positionChange = positionChange - 1;
+                        console.log(positionChange);
+                        
+                        if(positionChange == 1) {
+                            positionChange = 6;
+                            clearAll();
+                            generateSquares();
+                        }
+
+                        if (count == 0) {
+                            clearInterval(startTimer);
+                            //alert("Timer has ended")
+                            count = 20;
+                            clearAll();
+                            document.getElementById("button").innerHTML = "Press to start again";
+                            document.getElementById("button").disabled = false;
+                        }
+                    }, 1000);
+
+                    function generateSquares() {
+                        for (var i = 0; i <= numberOfSquares; i++) {
+                            generateRandomX(min, max);
+                            generateRandomY(min, max);
+
+                            squareDiv = document.createElement("div");
+                            squareDiv.id = "squareDiv" + squareDivArray.length;
+                            squareDiv.style = "background: rgb(14, 71, 163); border: 1px solid white; cursor: pointer; height: 50px; position: absolute; width: 50px";
+                            squareDiv.style.left = randomCoordinateX + "px";
+                            squareDiv.style.top = randomCoordinateY + "px";
+                            squareDiv.addEventListener("click", function () {
+                                deleteDivProcess(squareDiv.id);
+                            });
+
+                            document.getElementById("container").appendChild(squareDiv);
+                            squareDivArray.push(squareDiv);
+                        }
+                    }
+                }
+
+                function clearAll() {
+                    for (var k = 0; k < squareDivArray.length; k++) {
+                        container.removeChild(document.getElementById("squareDiv" + k));
+                    }
+                    squareDivArray = [];
                 }
 
                 function generateRandomX(min, max) {
