--- a/jsWhackAMole.html
+++ b/jsWhackAMole.html
@@ -21,10 +21,29 @@
             </div>
         </div>
         <div class="div-container">
-            <button id="button" onclick="beginProgram()">Click to Begin</button>
-            <p id="line01">20</p>
-            <!-- <canvas class="button-graphics btn" id="button-container" height="50" onclick="clearAll()" width="250"></canvas>
-            <canvas class="button-graphics btn" id="button-reset" height="50" onclick="reset()" width="250"></canvas> -->
+
+            <div class="button-graphics btn" id="text-subcontainer">
+                <div id="text-container">
+                    <p id="main-menu" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
+                        Main Menu
+                    </p>
+                </div>
+            </div>
+
+            <div class="btn" id="text-subcontainer">
+                <div id="text-container">
+                    <p id="display-timer" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
+                        20
+                    </p>
+                </div>
+            </div>
+
+           
+            <div class="button-graphics btn" id="text-subcontainer" onclick="beginProgram()">
+                <div id="text-container">
+                    <button class="text-style" id="button-begin">Click to Begin</button>
+                </div>
+            </div>
         </div>
 
         <!-- ************** SOURCE LINKS *************** -->
