--- a/gamepage.html
+++ b/gamepage.html
@@ -10,7 +10,7 @@
         </title>
 
         <!-- ************** SOURCE LINKS *************** -->
-        <link rel="stylesheet" href="jsWhackAMole.css">
+        <link rel="stylesheet" href="gamepage.css">
         <link rel="icon" type="image/x-icon" href="controllerIcon.png">
     </head>
 
@@ -33,7 +33,7 @@
             <div class="btn" id="text-subcontainer">
                 <div id="text-container">
                     <p id="display-timer" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
-                        20
+                        Timer
                     </p>
                 </div>
             </div>
