Addition of form popup message

--- a/gamepage.html
+++ b/gamepage.html
@@ -20,8 +20,18 @@
                 <div id="container"></div>
             </div>
         </div>
-        <div class="div-container">
 
+        <div class="div-container">
+            <div style="display: inline-block; position: relative">
+                <div class='form-popup' id='form-popup'>
+                    <div class='form-box'>
+                        <p id="message"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="div-container">
             <div class="button-graphics btn" id="text-subcontainer">
                 <div id="text-container">
                     <p id="main-menu" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
@@ -37,7 +47,6 @@
                     </p>
                 </div>
             </div>
-
            
             <div class="button-graphics btn" id="text-subcontainer" onclick="beginProgram()">
                 <div id="text-container">
