--- a/gamepage.html
+++ b/gamepage.html
@@ -34,7 +34,7 @@
                 <div class="button-base button-graphics" id="text-subcontainer">
                     <div id="text-container">
                         <a href="index.html" style="text-decoration: none">
-                            <p id="main-menu" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
+                            <p id="main-menu" style=" color: rgb(14, 71, 163); cursor: pointer; font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
                                 Main Menu
                             </p>
                         </a>
@@ -43,7 +43,7 @@
 
                 <div class="button-base" id="text-subcontainer">
                     <div id="text-container">
-                        <p id="display-timer" style=" color: rgb(14, 71, 163); font-family: Arial, Helvetica, sans-serif; font-size: 20px;  position: relative; bottom: 8px; text-align: center">
+                        <p id="display-timer">
                             Timer
                         </p>
                     </div>
@@ -51,7 +51,7 @@
             
                 <div class="button-base button-graphics" id="text-subcontainer" onclick="beginProgram()">
                     <div id="text-container">
-                        <button class="text-style" id="button-begin">Click to Begin</button>
+                        <button class="text-style" id="button-begin" style="cursor: pointer;">Click to Begin</button>
                     </div>
                 </div>
             </div>
