--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
 
         <body>
             <div class="div-container">
+                <div class="div-mole-animation">
 
+                </div>
+
+                <canvas class="title" height="200" id="canvas-title" width="700"></canvas>
+
+                <div class="div-mole-animation">
+
+                </div>
+                
+                <br><div class="div-container">
+                    <img src="hammer.png" alt="Mountain View">
+                </div>
             </div>
 
-            <div class="div-container">
+            <br><div class="div-container">
                 <a href="gamepage.html" style="text-decoration: none">
-                    <canvas class="button-base button-graphics" id="button-play" height="50" onclick="clearAll()" width="250"></canvas>
+                    <canvas class="button-base button-graphics" height="50" id="button-play" onclick="clearAll()" width="250"></canvas>
                 </a>
-                <canvas class="button-base button-graphics" id="button-instructions" height="50" onclick="instructionsPopup()" width="250"></canvas>
+                <canvas class="button-base button-graphics" height="50" id="button-instructions" onclick="instructionsPopup()" width="250"></canvas>
+            </div>
+
+            <div class="div-developer-name">
+                    <p id="matt-fung"> // Matt Fung 2018 // Ver 1.0 //</p>
             </div>
 
             <script src="index.js"></script>
