--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
             </title>
 
             <link rel="stylesheet" href="index.css">
-            <link rel="icon" type="image/x-icon" href="controllerIcon.png">
-        </head>
-
+            <link rel="icon" type="image/x-icon" href="animatedMole.png">
         <body>
             <div class="div-container">
                 <div class="div-mole-animation">
@@ -38,7 +36,11 @@
             </div>
 
             <div class="div-developer-name">
-                    <p id="matt-fung"> // Matt Fung 2018 // Ver 1.0 //</p>
+                <a href="https://github.com/mattfung99" style="text-decoration: none">
+                    <p id="matt-fung">
+                        // Matt Fung 2018 // Ver 1.0 //
+                    </p>
+                </a>
             </div>
 
             <script src="index.js"></script>
