Additional of Mole Animation

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
             <link rel="stylesheet" href="index.css">
             <link rel="icon" type="image/x-icon" href="animatedMole.png">
-        <body>
+        <body onload="moveForward()">
             <div class="div-container">
                 <div class="div-mole-animation">
-
+                    <img alt="Animated Mole" class="animated-mole" id="animated-mole-left" src="animatedMoleTitle.png">
                 </div>
 
-                <canvas class="title" height="200" id="canvas-title" width="700"></canvas>
+                <canvas class="title" height="200" id="canvas-title" width="600"></canvas>
 
                 <div class="div-mole-animation">
-
+                    <img alt="Animated Mole" class="animated-mole" id="animated-mole-right" src="animatedMoleTitle.png">
                 </div>
                 
                 <br><div class="div-container">
-                    <img src="hammer.png" alt="Mountain View">
+                    <img src="hammer.png" alt="Hammer">
                 </div>
             </div>
 
