Completion of Ver 1.0

--- a/gamepage.html
+++ b/gamepage.html
@@ -23,7 +23,7 @@
             <div class="div-container">
                 <div style="display: inline-block; position: relative">
                     <div class='form-popup' id='form-popup'>
-                        <div class='form-box'>
+                        <div class='form form-box'>
                             <p id="message"></p>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
 
                 <div class="button-base" id="text-subcontainer">
                     <div id="text-container">
-                        <p id="display-timer">
+                        <p id="display-timer" style="cursor: default">
                             Timer
                         </p>
                     </div>
