Refactor and Reorganization of Spikes and Investigations

--- a/Spikes_Investigations/randomTimerTest.html
+++ b/Spikes_Investigations/randomTimerTest.html
@@ -21,19 +21,6 @@
                 </div>
             </div>
 
-            <script>
-                var line01;
-                line01 = document.getElementById("line01");
-
-                function hidden() {
-                    line01.style = "visibility: hidden";
-                    setTimeout(visible, 3000);
-                }
-
-                function visible() {
-                    line01.style = "visibility: visible";
-                    setTimeout(hidden, 3000);
-                }
-            </script>
+            <script src="randomTimerTest.js"></script>
         </body>
     </html>
